# yes-video-streaming

./: Cargo.toml  index.html  style.css
src/: main.rs
